Remove building blocks and add DTOs to projects

--- a/src/Web/Web.MVC/Web.MVC/Views/Auth/Register.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Auth/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model RegisterMicroserviceLib.DTOs.Auth.RegisterDto
+﻿@model Web.MVC.DTOs.Auth.RegisterDto
 
 <h3>Зарегистрироваться</h3>
 <form method="post" asp-action="Register" asp-controller="Auth">
