Add return url to the login method

--- a/src/Web/Web.MVC/Web.MVC/Views/Auth/Login.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Auth/Login.cshtml
@@ -2,7 +2,7 @@
 
 <h4>Войти в аккаунт</h4>
 
-<form method="post" asp-controller="Auth" asp-action="Login">
+<form method="post">
     <div asp-validation-summary="ModelOnly"></div>
     <div>
         <label asp-for="UserNameOrEmail"></label><br/>
