--- a/src/Web/Web.MVC/Web.MVC/Views/Home/Index.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <a asp-controller="Auth" asp-action="Login">Войти</a>
+    <a asp-controller="Auth" asp-action="Login" asp-route-returnUrl="@Context.Request.Path">Войти</a>
     <a asp-controller="Auth" asp-action="Register">зарегистрироваться</a>
 </div>
