--- a/src/Web/Web.MVC/Web.MVC/Views/Home/Index.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Home/Index.cshtml
@@ -3,6 +3,17 @@
 }
 
 <div class="text-center">
+
+@if (User.Identity.IsAuthenticated)
+{
+    <form method="post" asp-controller="Auth" asp-action="Logout" asp-route-returnUrl="@Context.Request.Path">
+        <input type="submit" value="выйти"/>
+    </form>
+}
+else
+{
     <a asp-controller="Auth" asp-action="Login" asp-route-returnUrl="@Context.Request.Path">Войти</a>
     <a asp-controller="Auth" asp-action="Register">зарегистрироваться</a>
+} 
+
 </div>
