--- a/src/Web/Web.MVC/Web.MVC/Views/Home/Index.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Home/Index.cshtml
@@ -9,6 +9,7 @@
     <form method="post" asp-controller="Auth" asp-action="Logout" asp-route-returnUrl="@Context.Request.Path">
         <input type="submit" value="выйти"/>
     </form>
+    <a asp-controller="Auth" asp-action="ForgotPassword">Сбросить пароль</a>
 }
 else
 {
