Add forgot password reference

--- a/src/Web/Web.MVC/Web.MVC/Views/Auth/Login.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Auth/Login.cshtml
@@ -14,5 +14,6 @@
         <input asp-for="Password"/>
         <span asp-validation-for="Password"></span>
     </div>
+    <a asp-controller="Auth" asp-action="ForgotPassword">Забыли пароль?</a><br/>
     <input type="submit" value="войти"/>
 </form>
