--- a/src/Web/Web.MVC/Web.MVC/Views/Home/Index.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Home/Index.cshtml
@@ -4,6 +4,8 @@
 
 <div class="text-center">
 
+<a asp-controller="Topic" asp-action="Topics">Форум</a>    
+
 @if (User.Identity.IsAuthenticated)
 {
     <form method="post" asp-controller="Auth" asp-action="Logout" asp-route-returnUrl="@Context.Request.Path">
