--- a/src/Web/Web.MVC/Web.MVC/Views/Topic/Topic.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Topic/Topic.cshtml
@@ -1,13 +1,13 @@
-﻿@model List<Web.MVC.Models.ApiResponses.DiscussionResponse>
+﻿@model DiscussionViewModel
 
 <h3>Обсуждения</h3>
-
+<a asp-controller="Discussion" asp-action="SuggestDiscussion" asp-route-topicName="@Model.TopicName">создать обсуждение</a>
 <div>
-    @foreach (var discussion in Model)
+    @foreach (var discussion in Model.Discussions)
     {
         <h5>@discussion.Title</h5>
         <h6>Создано: @discussion.CreatedBy</h6>
         <h6>Рейтинг: @discussion.Rating</h6>
-        <h6>Дата создания: @discussion.CreatedAt.Date</h6>
+        <h6>Дата создания: @discussion.CreatedAt</h6>
     }
 </div>
