--- a/src/Web/Web.MVC/Web.MVC/Views/Topic/Topic.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Topic/Topic.cshtml
@@ -5,7 +5,7 @@
 <div>
     @foreach (var discussion in Model.Discussions)
     {
-        <h5>@discussion.Title</h5>
+        <a href="~/discussions/@discussion.Id">@discussion.Title</a>
         <h6>Создано: @discussion.CreatedBy</h6>
         <h6>Рейтинг: @discussion.Rating</h6>
         <h6>Дата создания: @discussion.CreatedAt</h6>
