--- a/src/Web/Web.MVC/Web.MVC/Views/Discussion/GetDiscussion.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Discussion/GetDiscussion.cshtml
@@ -6,6 +6,8 @@
     <p>Дата создания: @ViewBag.CreatedAt</p>
     <p>Рейтинг: @ViewBag.Rating</p>
     <p>@ViewBag.Content</p>
+    <a asp-action="AddReport" asp-controller="Report" asp-route-reportedUserName="@ViewBag.CreatedBy" asp-route-reportedDiscussionTitle="@ViewBag.Title"
+       asp-route-reportedDiscussionContent="@ViewBag.Content">пожаловаться</a>
 </div>
 <div>
     <form method="post" asp-controller="Discussion" asp-action="SuggestComment" asp-route-id="@ViewBag.DiscussionId">
@@ -19,15 +21,27 @@
     </form>
 </div>
 <div>
-    @foreach (var comment in ViewBag.Comments)
+    @if (ViewBag.Comments is null)
     {
-        <p>@comment.CreatedBy в @comment.CreatedDate</p>
-        <p>@comment.Content</p>
-        if (User.Identity.Name == comment.CreatedBy)
+        <p>Ещё никто не оставил комментарий под этим обсуждением :(</p>
+    }
+    else
+    {
+        @foreach (var comment in ViewBag.Comments)
         {
-            <form method="post" asp-controller="Comment" asp-action="DeleteComment" asp-route-returnUrl="@Context.Request.Path" asp-route-id="@comment.Id">
-                <input type="submit" value="удалить"/>
-            </form>
+            <p>@comment.CreatedBy в @comment.CreatedDate</p>
+            <p>@comment.Content</p>
+            if (User.Identity.Name == comment.CreatedBy)
+            {
+                <form method="post" asp-controller="Comment" asp-action="DeleteComment" asp-route-returnUrl="@Context.Request.Path" asp-route-id="@comment.Id">
+                    <input type="submit" value="удалить"/>
+                </form>
+            }
+            else
+            {
+                <a asp-action="AddReport" asp-controller="Report" asp-route-reportedUserName="@comment.CreatedBy"
+                   asp-route-reportedCommentContent="@comment.Content">пожаловаться</a>
+            }
         }
     }
 </div>
