--- a/src/Web/Web.MVC/Web.MVC/Views/Moderator/BanUser.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Moderator/BanUser.cshtml
@@ -27,6 +27,9 @@
         <p>
             <input type="radio" value="Жалоба" name="banType" /> Жалоба
         </p>
+        <p>
+            <input type="radio" value="Тема" name="banType" /> Тема
+        </p>
     </div>
     <input type="submit" value="отстранить" />
 </form>
