--- a/src/Web/Web.MVC/Web.MVC/Views/Report/Reports.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Report/Reports.cshtml
@@ -8,21 +8,20 @@
     }
     else
     {
-        @foreach (var report in Model)
-        {
-            <table>
-            if (report.ReportedCommentContent is null)
+        <table>
+            <tr><th>От пользователя</th><th>Причина</th><th>Тип</th></tr>
+            @foreach (var report in Model)
             {
-                <tr><th>От пользователя</th><th>Обсуждение</th><th></th></tr>
-                <tr><td>@report.UserNameReportedBy</td><td><a href="~/reports/@report.Id">перейти</a></td></tr>
+                if (report.ReportedCommentContent is null)
+                {
+                    <tr><td>@report.UserNameReportedBy</td><td>@report.Reason</td><td><a href="~/reports/@report.Id">обсуждение</a></td></tr>
+                }
+                else
+                {
+                    <tr><td>@report.UserNameReportedBy</td><td>@report.Reason</td><td><a href="~/reports/@report.Id">комментарий</a></td></tr>
+                }
             }
-            else
-            {
-                <tr><th>От пользователя</th><th>Комментарий</th></tr>
-                <tr><td>@report.UserNameReportedBy</td><td><a href="~/reports/@report.Id">перейти</a></td></tr>
-            }
-            </table>
-        }
+        </table>
     }
     
 </div>
