--- a/src/Web/Web.MVC/Web.MVC/Views/Moderator/SuggestedComments.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Moderator/SuggestedComments.cshtml
@@ -1,4 +1,6 @@
-﻿@model List<Web.MVC.Models.ApiResponses.CommentsResponses.SuggestedCommentResponse>
+﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
+@using Web.MVC.Constants
+@model List<Web.MVC.Models.ApiResponses.CommentsResponses.SuggestedCommentResponse>
 
 <div class="text-center">
     @foreach (var suggestedComment in Model)
@@ -10,5 +12,10 @@
         <form method="post" asp-controller="Moderator" asp-action="RejectSuggestedComment" asp-route-id="@suggestedComment.Id">
             <input type="submit" value="отклонить" />
         </form>
+        <a asp-controller="Moderator" asp-action="BanUserAndDeleteSuggestion"
+           asp-route-returnUrl="@Context.Request.Path" asp-route-userName="@suggestedComment.CreatedBy"
+           asp-route-suggestionDeleteId="@suggestedComment.Id" asp-route-suggestionDeleteType="@BanTypeConstants.CommentBanType">
+            остранить и отклонить предложение
+        </a>
     }
 </div>
