--- a/src/Web/Web.MVC/Web.MVC/Views/Moderator/SuggestedDiscussions.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Moderator/SuggestedDiscussions.cshtml
@@ -4,6 +4,6 @@
     <h3>Предложенные обсуждения</h3>
     @foreach (var suggestedDiscussion in Model)
     {
-        <a href="~/SuggestedDiscussions/@suggestedDiscussion.Id">@suggestedDiscussion.Title</a>
+        <a href="~/SuggestedDiscussions/@suggestedDiscussion.Id">@suggestedDiscussion.Title</a><br/>
     }
 </div>
