--- a/src/Web/Web.MVC/Web.MVC/Views/Home/Index.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Home/Index.cshtml
@@ -8,6 +8,7 @@
 
 @if (User.Identity.IsAuthenticated)
 {
+    <a asp-controller="User" asp-action="GetUser" asp-route-userName="@User.Identity.Name">мой профиль</a>
     <form method="post" asp-controller="Auth" asp-action="Logout" asp-route-returnUrl="@Context.Request.Path">
         <input type="submit" value="выйти"/>
     </form>
