--- a/src/Web/Web.MVC/Web.MVC/Views/User/GetUser.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/User/GetUser.cshtml
@@ -24,6 +24,7 @@
         {
             foreach (var discussion in ViewBag.Discussions)
             {
+                <h3>Созданные обсуждения</h3>
                 <h5>@discussion.Title</h5>
                 <p>Создано: @discussion.CreatedAt</p>
                 <p>Рейтинг: @discussion.Rating</p>
@@ -39,9 +40,43 @@
         {
             foreach (var comment in ViewBag.Comments)
             {
+                <h3>Созданные комментарии</h3>
                 <h6>@comment.Content</h6>
                 <p>Создано: @comment.CreatedDate</p>
             }
         }
     </div>
+    @if (User.Identity.Name == @Model.UserName)
+    {
+        <div>
+            <h3>Предложенные обсуждения</h3>
+            @if (ViewBag.SuggestedDiscussions is null || ViewBag.SuggestedDiscussions.Count == 0)
+            {
+                <p>Предложенных обсуждений нет</p>
+            }
+            else
+            {
+                foreach (var suggestedDiscussion in ViewBag.SuggestedDiscussions)
+                {
+                    <p>@suggestedDiscussion.Title</p>
+                    <p>Статус: На рассмотрении</p>
+                }
+            }
+        </div>
+        <div>
+            <h3>Предложенные комментарии</h3>
+            @if (ViewBag.SuggestedComments is null || ViewBag.SuggestedComments.Count == 0)
+            {
+                <p>Предложенных комментариев нет</p>
+            }
+            else
+            {
+                foreach (var suggestedComment in ViewBag.SuggestedComments)
+                {
+                    <p>@suggestedComment.Content</p>
+                    <p>Статус: На рассмотрении</p>
+                }
+            }
+        </div>
+    }
 </div>
