--- a/src/Web/Web.MVC/Web.MVC/Views/User/GetUser.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/User/GetUser.cshtml
@@ -25,7 +25,7 @@
             <h3>Созданные обсуждения</h3>
             foreach (var discussion in ViewBag.Discussions)
             {
-                <h5>@discussion.Title</h5>
+                <a href="~/discussions/@discussion.Id">@discussion.Title</a>
                 <p>Создано: @discussion.CreatedAt</p>
                 <p>Рейтинг: @discussion.Rating</p>
             }
@@ -41,7 +41,7 @@
             <h3>Созданные комментарии</h3>
             foreach (var comment in ViewBag.Comments)
             {
-                <h6>@comment.Content</h6>
+                <a href="~/discussions/@comment.DiscussionId">@comment.Content</a>
                 <p>Создано: @comment.CreatedDate</p>
             }
         }
@@ -58,7 +58,7 @@
             {
                 foreach (var suggestedDiscussion in ViewBag.SuggestedDiscussions)
                 {
-                    <p>@suggestedDiscussion.Title</p>
+                    <a href="~/MySuggestions/@suggestedDiscussion.Id">@suggestedDiscussion.Title</a>
                     <p>Статус: На рассмотрении</p>
                 }
             }
@@ -73,8 +73,12 @@
             {
                 foreach (var suggestedComment in ViewBag.SuggestedComments)
                 {
-                    <p>@suggestedComment.Content</p>
+                    <a href="~/discussions/@suggestedComment.DiscussionId">@suggestedComment.Content</a>
                     <p>Статус: На рассмотрении</p>
+                    <form method="post" asp-controller="SuggestComment" asp-action="DeleteSuggestedComment" asp-route-returnUrl="@Context.Request.Path"
+                          asp-route-suggestedCommentId="@suggestedComment.Id">
+                        <input type="submit" value="удалить"/>
+                    </form>
                 }
             }
         </div>
