--- a/src/Web/Web.MVC/Web.MVC/Views/Moderator/GetSuggestedTopicsByUserName.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Moderator/GetSuggestedTopicsByUserName.cshtml
@@ -3,17 +3,16 @@
 
 <div class="text-center">
     <h3>Предложенные темы</h3>
-    @foreach (var suggestedTopic in Model)
+    @if (Model.Count != 0)
     {
-        <form method="post" asp-controller="Moderator" asp-action="DeleteSuggestedTopicsByUserName" asp-route-userName="@suggestedTopic.SuggestedBy"
+        <form method="post" asp-controller="Moderator" asp-action="DeleteSuggestedTopicsByUserName" asp-route-userName="@ViewBag.SuggestedByUserName"
               asp-route-returnUrl="@Context.Request.Path">
-            <input type="submit" value="удалить все предложенные темы"/>
+            <input type="submit" value="удалить все предложенные темы" />
         </form>
-        <form method="post" asp-controller="Moderator" asp-action="BanUser" asp-route-userName="@suggestedTopic.SuggestedBy"
+        <form method="post" asp-controller="Moderator" asp-action="BanUser" asp-route-userName="@ViewBag.SuggestedByUserName"
               asp-route-returnUrl="@Context.Request.Path">
-            <input type="submit" value="забанить пользователя"/>
+            <input type="submit" value="забанить пользователя" />
         </form>
-        break;
     }
     
     <table>
