--- a/src/Web/Web.MVC/Web.MVC/Views/User/GetUser.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/User/GetUser.cshtml
@@ -18,6 +18,7 @@
         @if (User.IsInRole(UserRoleConstants.AdminRole) || User.IsInRole(UserRoleConstants.ModeratorRole))
         {
             <a href="~/SuggestedTopics/@Model.UserName">предложенные темы</a>
+            <a href="~/Suggestions/Discussions/@Model.UserName">предложенные обсуждения</a>
         }
     </div>
     <div>
