--- a/src/Web/Web.MVC/Web.MVC/Views/User/GetUser.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/User/GetUser.cshtml
@@ -18,7 +18,8 @@
         @if (User.IsInRole(UserRoleConstants.AdminRole) || User.IsInRole(UserRoleConstants.ModeratorRole))
         {
             <a href="~/SuggestedTopics/@Model.UserName">предложенные темы</a><br/>
-            <a href="~/Suggestions/Discussions/@Model.UserName">предложенные обсуждения</a>
+            <a href="~/Suggestions/Discussions/@Model.UserName">предложенные обсуждения</a><br/>
+            <a href="~/Suggestions/Comments/@Model.UserName">предложенные комментарии</a>
         }
     </div>
     <div>
