Update by adding reference

--- a/src/Web/Web.MVC/Web.MVC/Views/User/GetUser.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/User/GetUser.cshtml
@@ -19,7 +19,8 @@
         {
             <a href="~/SuggestedTopics/@Model.UserName">предложенные темы</a><br/>
             <a href="~/Suggestions/Discussions/@Model.UserName">предложенные обсуждения</a><br/>
-            <a href="~/Suggestions/Comments/@Model.UserName">предложенные комментарии</a>
+            <a href="~/Suggestions/Comments/@Model.UserName">предложенные комментарии</a><br/>
+            <a href="~/Reports/@Model.UserName">жалобы</a>
         }
     </div>
     <div>
