--- a/src/Web/Web.MVC/Web.MVC/Views/User/GetUser.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/User/GetUser.cshtml
@@ -20,7 +20,7 @@
             <a href="~/SuggestedTopics/@Model.UserName">предложенные темы</a><br/>
             <a href="~/Suggestions/Discussions/@Model.UserName">предложенные обсуждения</a><br/>
             <a href="~/Suggestions/Comments/@Model.UserName">предложенные комментарии</a><br/>
-            <a href="~/Reports/@Model.UserName">жалобы</a>
+            <a href="~/ReportsByUser/@Model.UserName">жалобы</a>
         }
     </div>
     <div>
