--- a/src/Web/Web.MVC/Web.MVC/Views/Moderator/SuggestedDiscussion.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Moderator/SuggestedDiscussion.cshtml
@@ -5,8 +5,8 @@
 <h3>@Model.Title</h3>
 <p>@Model.Content</p>
 
-<form method="post" asp-controller="Moderator" asp-action="AcceptSuggestedDiscussion" asp-route-id="@Model.Id"><input type="submit" value="принять"/></form>
-<form method="post" asp-controller="Moderator" asp-action="RejectSuggestedDiscussion" asp-route-id="@Model.Id"><input type="submit" value="отклонить" /></form>
+<form method="post" asp-controller="Moderator" asp-action="AcceptSuggestedDiscussion" asp-route-id="@Model.Id" asp-route-returnUrl="@Context.Request.Path"><input type="submit" value="принять"/></form>
+<form method="post" asp-controller="Moderator" asp-action="RejectSuggestedDiscussion" asp-route-id="@Model.Id" asp-route-returnUrl="@Context.Request.Path"><input type="submit" value="отклонить" /></form>
 <a asp-controller="Moderator" asp-action="BanUserAndDeleteSuggestion"
    asp-route-returnUrl="/Moderator/SuggestedDiscussions" asp-route-userName="@Model.CreatedBy"
    asp-route-suggestionDeleteId="@Model.Id" asp-route-suggestionDeleteType="@BanTypeConstants.DiscussionBanType">
