--- a/src/Web/Web.MVC/Web.MVC/Views/Moderator/SuggestedDiscussions.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Moderator/SuggestedDiscussions.cshtml
@@ -1,9 +1,10 @@
-﻿@model List<Web.MVC.Models.ApiResponses.DiscussionResponse>
+﻿@using System.Web
+@model List<Web.MVC.Models.ApiResponses.DiscussionResponse>
 
 <div class="text-center">
     <h3>Предложенные обсуждения</h3>
     @foreach (var suggestedDiscussion in Model)
     {
-        <a href="~/SuggestedDiscussions/@suggestedDiscussion.Id">@suggestedDiscussion.Title</a><br/>
+        <a href="~/SuggestedDiscussions/@suggestedDiscussion.Id?returnUrl=@HttpUtility.UrlEncode(Context.Request.Path + Context.Request.QueryString)">@suggestedDiscussion.Title</a><br/>
     }
 </div>
