--- a/src/Web/Web.MVC/Web.MVC/Views/User/GetUser.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/User/GetUser.cshtml
@@ -1,4 +1,5 @@
-﻿@using Web.MVC.Constants
+﻿@using System.Web
+@using Web.MVC.Constants
 @model Web.MVC.Models.ApiResponses.CustUserResponses.UserResponse
 
 <div class="text-center">
@@ -86,6 +87,26 @@
                     <form method="post" asp-controller="SuggestComment" asp-action="DeleteSuggestedComment" asp-route-returnUrl="@Context.Request.Path"
                           asp-route-suggestedCommentId="@suggestedComment.Id">
                         <input type="submit" value="удалить"/>
+                    </form>
+                }
+            }
+        </div>
+        <div>
+            <h3>Предложенные темы</h3>
+            @if (ViewBag.SuggestedTopics is null || ViewBag.SuggestedTopics.Count == 0)
+            {
+                <p>Предложенных тем нет</p>
+            }
+            else
+            {
+                foreach (var suggestedComment in ViewBag.SuggestedComments)
+                {
+                    <h6>@suggestedComment.Name</h6>
+                    <p>Статус: На рассмотрении</p>
+                    <form method="post" asp-controller="SuggestTopic" asp-action="DeleteSuggestedTopicById"
+                          asp-route-returnUrl="@HttpUtility.UrlEncode(Context.Request.Path + Context.Request.QueryString)" 
+                          asp-route-id="@suggestedComment.Id">
+                        <input type="submit" value="удалить" />
                     </form>
                 }
             }
