--- a/src/Web/Web.MVC/Web.MVC/Views/User/GetUser.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/User/GetUser.cshtml
@@ -99,13 +99,13 @@
             }
             else
             {
-                foreach (var suggestedComment in ViewBag.SuggestedComments)
+                foreach (var suggestedTopic in ViewBag.SuggestedTopics)
                 {
-                    <h6>@suggestedComment.Name</h6>
+                    <h6>@suggestedTopic.Name</h6>
                     <p>Статус: На рассмотрении</p>
                     <form method="post" asp-controller="SuggestTopic" asp-action="DeleteSuggestedTopicById"
-                          asp-route-returnUrl="@HttpUtility.UrlEncode(Context.Request.Path + Context.Request.QueryString)" 
-                          asp-route-id="@suggestedComment.Id">
+                          asp-route-returnUrl="@Context.Request.Path"
+                          asp-route-id="@suggestedTopic.Id">
                         <input type="submit" value="удалить" />
                     </form>
                 }
